# com.sandpolis.deployer.rust

./: Cargo.toml  build.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml
res/: distagent.json
src/: callback.rs  config.rs  http.rs  kilo.rs  main.rs  micro.rs  nano.rs  systemd.rs
src/agents/: kilo.rs  micro.rs  nano.rs  vanilla.rs
