#cargo-features = ["strip"]

[package]
name = "distagent"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
rust-embed = { version = "5.9", default-features = false, features = ["debug-embed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#[profile.release]
#strip = "symbols"
